# SynapseVault

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: crypto_bench.rs
docs/: CODE_REVIEW_REPORT.md  Phase2_复检报告.md  Phase2_验收报告.md  Phase3_复检报告.md  Phase4_验收_优化_构建报告.md  Phase4_验收报告.md  Phase5_验收报告.md  Phase6_剩余任务.md  SynapseVault构建方案文档.md  developer_guide.md  phase0+phase1重新验收报告.md  phase0验收否决报告.md  phase1验收报告.md  user_manual.md
src/: app.rs  lib.rs  main.rs
src/audit/: event.rs  export.rs  logger.rs  mod.rs
src/auth/: device_fingerprint.rs  keyfile.rs  mod.rs  unlock.rs
src/blockchain/: block.rs  chain.rs  consensus.rs  merkle.rs  mod.rs  validator.rs
src/crypto/: kdf.rs  key_derivation.rs  mod.rs  signing.rs  symmetric.rs
src/group/: group_key.rs  manager.rs  member.rs  mod.rs
src/p2p/: discovery.rs  event_loop.rs  gossip.rs  mod.rs  protocol.rs  transport.rs
src/rbac/: mod.rs  policy.rs  role.rs
src/secret/: clipboard.rs  entry.rs  import_export.rs  mod.rs  store.rs
src/storage/: database.rs  mod.rs  schema.rs
src/sync/: crdt_engine.rs  merge.rs  mod.rs  snapshot.rs
src/ui/: audit_panel.rs  group_panel.rs  main_layout.rs  mod.rs  rbac_panel.rs  secret_panel.rs  side_panel.rs  theme.rs  top_bar.rs  unlock_window.rs
src/ui/dialogs/: approve_member.rs  audit_detail.rs  create_group.rs  create_secret.rs  join_group.rs  mod.rs  usage_approve.rs  usage_request.rs  view_secret.rs
tests/: blockchain_audit_integration_test.rs  p2p_group_integration_test.rs  pentest.rs  project_sanity_test.rs  rbac_sync_integration_test.rs  secret_crud_test.rs  ui_smoke_test.rs  unlock_flow_test.rs
