[package]
name = "synapse-vault"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["SynapseVault Contributors"]
description = "纯分布式局域网团队密码库"
license = "Apache-2.0"
repository = "https://github.com/SynapseVault/synapse-vault"

[dependencies]
# GUI
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["wgpu"] }
egui_extras = { version = "0.34.1", features = ["image"] }

# P2P
libp2p = { version = "0.56", features = [
    "tokio", "gossipsub", "mdns", "noise", "quic",
    "tcp", "yamux", "identify", "macros", "ed25519",
    "serde"
] }

# Crypto
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2.2", features = ["zeroize", "rand_core", "serde"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Storage
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }

# CRDT
crdts = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Device
machine-uid = "0.5"
local-ip-address = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Directories
dirs = "6.0"

# Hex encoding
hex = "0.4"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Clipboard
arboard = "3.4"

# File dialog
rfd = "0.15"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tempfile = "3.0"
libp2p-swarm-test = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[[bench]]
name = "crypto_bench"
harness = false
